// [START declaration]
syntax = "proto3";
package sapient_msg.bsi_flex_335_v1_0;

import "google/protobuf/timestamp.proto";

import "sapient_msg/bsi_flex_335_v1_0/location.proto";
import "sapient_msg/bsi_flex_335_v1_0/range_bearing.proto";
import "sapient_msg/proto_options.proto";
// [END declaration]

// [START java_declaration]
option java_multiple_files = true;
option java_package = "uk.gov.dstl.sapientmsg";
option java_outer_classname = "TaskProto";
// [END java_declaration]


// [START messages]
message Task {
    option (message_options) = {xml_message_name: "SensorTask"};

    optional string task_id = 1 [(field_options) = {is_mandatory: true, is_ulid: true, xml_name: "taskID"}]; // ULID for the task being sent
    optional string task_name = 2; // Name of the task being requested
    optional string task_description = 3; // Description of the task being requested
    optional google.protobuf.Timestamp task_start_time = 4 [(field_options) = {is_proto_time: true}]; // Time the task is requested to start at
    optional google.protobuf.Timestamp task_end_time = 5 [(field_options) = {is_proto_time: true}]; // Time the task is requested to end at
    optional Control control = 6 [(field_options) = {is_mandatory: true}]; // Control action being requested
    repeated Region region = 7; // Area tasking is to be applied (such as a system implementing geo-fencing)
    optional Command command = 8; // Command being requested as part the task

    enum Control {
        CONTROL_UNSPECIFIED = 0; // No control set
        CONTROL_START = 1; // Initialise/start the task
        CONTROL_STOP = 2; // Stop the task, remove the definition and revert to the previous task
        CONTROL_PAUSE = 3; // Stop the task, keep the definition for later use and revert to previous task
        CONTROL_DEFAULT = 4; // Start/revert to the default task. Stop all other tasks
    }

    message Command {
        reserved 7; // This was a proposed 'custom' command that was never ratified
        oneof command {
            option (oneof_options) = {is_mandatory: true};
            string request = 1; // The request being asked for
            DiscreteThreshold detection_threshold = 2; // The requested sensitivity of sensor during the task
            DiscreteThreshold detection_report_rate = 3; // The requested reporting rate of sensor during the task
            DiscreteThreshold classification_threshold = 4; // The requested classification sensitivity of sensor during the task
            string mode_change = 5 [(field_options) = {xml_name: "mode"}]; // Mode change for the ASM
            LocationOrRangeBearing look_at = 6; // LookAt command for tasking pointing ASMs
        }
        optional string command_parameter = 8; // Parameter string for some commands
    }

    enum DiscreteThreshold {
        DISCRETE_THRESHOLD_UNSPECIFIED = 0; // Threshold not set
        DISCRETE_THRESHOLD_LOW = 1; // Threshold set to low
        DISCRETE_THRESHOLD_MEDIUM = 2; // Threshold set to medium
        DISCRETE_THRESHOLD_HIGH = 3; // Threshold set to high
    }

    message Region {
        optional RegionType type = 1 [(field_options) = {is_mandatory: true}]; // Type of region
        optional string region_id = 2 [(field_options) = {is_mandatory: true, is_ulid: true, xml_name: "regionID"}]; // Unique ID of region
        optional string region_name = 3 [(field_options) = {is_mandatory: true}]; // Name of region
        optional LocationOrRangeBearing region_area = 4 [(field_options) = {is_mandatory: true}]; // Area that defines the region
        repeated ClassFilter class_filter = 5; // Filter for classifications detected in the region
        repeated BehaviourFilter behaviour_filter = 6; // Filter for behaviours detected in the region
    }

    enum RegionType {
        REGION_TYPE_UNSPECIFIED = 0;
        REGION_TYPE_AREA_OF_INTEREST = 1 [(enum_options) = {enum_name: "Area of Interest"}];
        REGION_TYPE_IGNORE = 2;
        REGION_TYPE_BOUNDARY = 3;
    }

    message LocationOrRangeBearing {
        oneof fov_oneof {
            option (oneof_options) = {is_mandatory: true};
            RangeBearingCone range_bearing = 1 [(field_options) = {xml_name: "rangeBearingCone"}]; // Location in Spherical coordinates
            LocationList location_list = 2; // Location in Geo coordinates
        }
    }

    message ClassFilter {
        optional Parameter parameter = 1 [(field_options) = {is_mandatory: true}]; // Parameter to filter on
        optional string type = 2 [(field_options) = {is_mandatory: true, xml_is_attribute: true}]; // Type of classification to filter on
        repeated SubClassFilter sub_class_filter = 3; // Sub-classes to filter on
        optional DiscreteThreshold priority = 4; // Priority of filter
    }

    message SubClassFilter {
        optional Parameter parameter = 1 [(field_options) = {is_mandatory: true}]; // Parameter to filter on
        optional string type = 2 [(field_options) = {is_mandatory: true, xml_is_attribute: true}]; // Type of classification to filter on
        repeated SubClassFilter sub_class_filter = 3; // Sub-classes to filter on
        optional DiscreteThreshold priority = 4; // Priority of filter
    }

    message BehaviourFilter {
        optional Parameter parameter = 1 [(field_options) = {is_mandatory: true}]; // Parameter to filter on
        optional string type = 2 [(field_options) = {xml_is_attribute: true}]; // Type of behaviour to filter on
        optional DiscreteThreshold priority = 3 [(field_options) = {xml_is_attribute: true}]; // Priority of filter
    }

    message Parameter {
        optional string name = 1 [(field_options) = {is_mandatory: true, xml_is_attribute: true}]; // Name of the parameter to filter
        optional Operator operator = 2 [(field_options) = {is_mandatory: true, xml_is_attribute: true}]; // Operator to be filtered on
        optional float value = 3 [(field_options) = {is_mandatory: true, xml_is_attribute: true}]; // Threshold
    }

    enum Operator {
        OPERATOR_UNSPECIFIED = 0;
        OPERATOR_ALL = 1;
        OPERATOR_GREATER_THAN = 2;
        OPERATOR_LESS_THAN = 3;
        OPERATOR_EQUALS = 4;
    }
}
// [END messages]
